# retargetiung

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
assets/scenes/: bimanual_hand_obj.xml  single_hand_obj.xml  single_hand_obj_left.xml
config/: hocap.yaml  interaction_mesh_left.yaml  manus.yaml
demos/: hocap.py  manus.py  omniretarget.py
demos/hocap/: play_hocap.py  play_hocap_compare.py
demos/humanoid/: play_omniretarget_demo.py
demos/legacy/: play_interaction_mesh.py  play_manus.py  play_mesh_only.py
demos/shared/: cache.py  overlay.py  playback.py
doc/: exp8_link_midpoint_joint_optimization.md  exp_delaunay_backend.md  exp_warmup_tip_anchor_removal.md  improvement_plan.md  omni.md  refactoring_progress.md  review_issues.md  tech_report_hand_retargeting.md  trajmd
experiments/: benchmark.py  compare_pipelines.py  exp3_semantic_weight.py  exp_penetration_ablation.py  object_interaction_benchmark.py  results_exp2.md  results_exp3.md
experiments/archive/: exp_edge_ratio.py  exp_object_frame.py  exp_palm_spread.py  results_palm_spread.md
experiments/penetration_ablation/: REPORT.md  run.py
experiments/penetration_ablation_exp/: REPORT.md  summary.json
scripts/: batch_retarget_hocap.py  compare_hocap.py  play_hocap_compare.py  retarget_hocap.py
src/hand_retarget/: __init__.py  config.py  mediapipe_io.py  mesh_utils.py  mujoco_hand.py  (+1 more)
tests/: capture_gate_baselines.py  conftest.py  hocap_gate_baseline.npz  refactor_baseline.npz  refactor_gate_baseline.npz  test_config.py  test_gate.py  test_mesh_utils.py  test_refactor_baseline.py
(+97 files in other folders)
