[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-retarget"
version = "0.1.0"
description = "Interaction-mesh hand retargeting (MediaPipe 21 pts -> WujiHand 20 DOF)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "mujoco",
    "pinocchio",
    "qpsolvers[daqp]",
    "trimesh",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
demos = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
